[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MZ",email = "email@yes.cz"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
    "pymongo>=4.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"